--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,8 +87,8 @@ jobs:
         run: terraform -chdir="./example" plan
 
       - name: Debug
-        run: ${{ github.event_name }} ${{ github.ref }}
-        
+        run: echo "${{ github.event_name }} ${{ github.ref }}"
+
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
